// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should display content with default classnames 1`] = `
<div>
  <p
    class="text-body-md space-y-paragraphSpacing-body-md leading-body-md font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with bold enabled 1`] = `
<div>
  <p
    class="text-body-md space-y-paragraphSpacing-body-md leading-body-md font-bold not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with italic enabled 1`] = `
<div>
  <p
    class="text-body-md space-y-paragraphSpacing-body-md leading-body-md font-regular italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size lg 1`] = `
<div>
  <p
    class="text-body-lg space-y-paragraphSpacing-body-lg leading-body-lg font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size md 1`] = `
<div>
  <p
    class="text-body-md space-y-paragraphSpacing-body-md leading-body-md font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size sm 1`] = `
<div>
  <p
    class="text-body-sm space-y-paragraphSpacing-body-sm leading-body-sm font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size xl 1`] = `
<div>
  <p
    class="text-body-xl space-y-paragraphSpacing-body-xl leading-body-xl font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;

exports[`Text should have correct classnames with size xl and type underline 1`] = `
<div>
  <p
    class="text-body-xl space-y-paragraphSpacing-body-xl leading-body-xl font-regular not-italic underline text-typography-prominent"
  >
    Text content
  </p>
</div>
`;
